Fixed Subtotal Alignment

--- a/08 Restaurant/css/style.css
+++ b/08 Restaurant/css/style.css
@@ -290,7 +290,7 @@ body {
   overflow: hidden;
   padding: 0;
   margin-right: -15px;
-  margin-left: auto;
+  margin-left: 25%;
   margin-bottom: 20px;
   max-width: 285px;
 }
